# ILCSoftInstall

./: CMakeLists.txt  README.md
cmake/: CreateILCSoftCMake.cmake  FindMySQL.cmake  ILCPackageAddMacro.cmake  ILCSoft_Base.cmake  ILCSoft_Core.cmake  WriteInit.cmake
